# Halcon_SoftwarePackage

./: .devdbrc  .gitignore  CMakeLists.txt  README.md  序列号.txt
3rd/XCGUI/: XCGUI.lib
3rd/iup/: ftgl.lib  iup.lib  iup_mglplot.lib  iup_mglplot_debug.lib  iup_scintilla.lib  iupim.lib  iupole.lib  iuptuio.lib
3rd/iup/lib/: freetype6.lib  iup_plot.lib  iup_scintilla_debug.lib  iupcd.lib  iupcontrols.lib  iupfiledlg.lib  iupgl.lib  iupglcontrols.lib  iupimglib.lib  iupweb.lib  zlib1.lib
3rd/libmodbus/: modbus.h  modbus.lib
3rd/sqlite/: sqlite3.exp  sqlite3.lib
def/: Halcon_Modbus.def  Halcon_Sqlite.def
doc/html/reference/: GetStringByImageOut.html  HHalconSoftwarePackage.html  SetStringByImageIn.html  index.html  index_by_name.html  index_classes.html  modbus_close.html  modbus_read_bits.html  modbus_read_inputbits.html  modbus_read_register_float.html  modbus_read_register_int.html  modbus_read_registers.html  modbus_rtu_connect.html  modbus_set_slave_ID.html  modbus_strerror.html  modbus_tcp_connect.html  modbus_write_bit.html  modbus_write_bits.html  modbus_write_register.html  modbus_write_register_float.html  modbus_write_register_int.html  modbus_write_registers.html  sqlite3_close.html  sqlite3_get_table.html  sqlite3_loadOrSaveDb.html  toc_userextensions.html
examples/: Image2String.hdev  memory.db  modbus.hdev  sqlite.hdev
help/: operators_en_US.idx  operators_en_US.key  operators_en_US.num  operators_en_US.ref  operators_en_US.sta
include/: Halcon_Def.h  Halcon_SoftwarePackage.h
source/: Halcon_SoftwarePackage.c  Halcon_XGUI.cpp  Halcon_modbus.cpp  Halcon_sqlite.cpp
